clients-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clients
  labels:
    name: clients
spec:
  selector:
    matchLabels:
      name: clients
  replicas: 1
  template:
    metadata:
      labels:
        name: clients
    spec:
      containers:
        - name: clients
          image: myimage:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
