groups-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groups
  labels:
    name: groups
spec:
  selector:
    matchLabels:
      name: groups
  replicas: 1
  template:
    metadata:
      labels:
        name: groups
    spec:
      containers:
        - name: groups
          image: myimage:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
