organisations-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organisations
  labels:
    name: organisations
spec:
  selector:
    matchLabels:
      name: organisations
  replicas: 1
  template:
    metadata:
      labels:
        name: organisations
    spec:
      containers:
        - name: organisations
          image: myimage:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
