users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    name: users
spec:
  selector:
    matchLabels:
      name: users
  replicas: 1
  template:
    metadata:
      labels:
        name: users
    spec:
      containers:
        - name: users
          image: myimage:v1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
