redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    name: redis
spec:
  selector:
    matchLabels:
      name: redis
  replicas: 1
  template:
    metadata:
      labels:
        name: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: redis
