api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    name: api
spec:
  selector:
    matchLabels:
      name: api
  replicas: 3
  template:
    metadata:
      labels:
        app: api
        name: api
    spec:
      containers:
        - name: api
          image: myimage:v1
          imagePullPolicy: Always
          ports:
            - name: api
              containerPort: 3000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    name: api-service
spec:
  type: NodePort
  sessionAffinity: ClientIP
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
    - port: 443
      name: https
      targetPort: 3000
      protocol: TCP
  selector:
    app: api

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "nlp-ip"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: api-service
              servicePort: 80
